@@ -27,6 +27,7 @@
 
 #include <time.h>              // new
 #include <sys/time.h>          // new
+#include <sys/un.h>            // new
 
 #include "config.h"
 
@@ -269,6 +270,27 @@ static size_t writeHeaders(void *ptr, size_t size,
 }
 
 
+#if LIBCURL_VERSION_NUM >= 0x071101
+static curl_socket_t opensockCb(void *clientp, 
+		curlsocktype purpose, 
+		struct curl_sockaddr *caddr)
+{
+   const char* path = (const char*)clientp;
+   struct sockaddr_un* unaddr = (struct sockaddr_un*)&caddr->addr;
+   caddr->family = AF_UNIX; 
+   caddr->addrlen = sizeof(struct sockaddr_un);
+   /* This is actually safe.  caddr is padded.  See singleipconnect()
+    * in lib/connect.c within libcurl for details */ 
+   memset(unaddr, 0, caddr->addrlen);
+   unaddr->sun_family = AF_UNIX;
+   strncpy(unaddr->sun_path, path, sizeof(unaddr->sun_path));
+   caddr->protocol = 0; 
+   return socket(caddr->family, caddr->socktype, caddr->protocol);
+}
+#endif
+
+/* --------------------------------------------------------------------------*/
+
 static size_t writeCb(void *ptr, size_t size,
 					size_t nmemb, void *stream)
 {
@@ -376,8 +398,19 @@ static char* genRequest(ClientEnc *cle, const char *op,
    con->mResponse->ft->reset(con->mResponse);
 
    con->mUri->ft->reset(con->mUri);
-   con->mUri->ft->append6Chars(con->mUri, cld->scheme, "://", cld->hostName,
-						  ":", cld->port, "/cimom");
+
+#if LIBCURL_VERSION_NUM >= 0x071101
+   if (cld->port != NULL && cld->port[0] == '/') {
+   // Setup connection to Unix Socket
+      con->mUri->ft->append3Chars(con->mUri, cld->scheme, "://", cld->hostName);
+      con->mUri->ft->appendChars(con->mUri, "/cimom"); 
+      curl_easy_setopt(con->mHandle, CURLOPT_OPENSOCKETDATA, cld->port);
+      curl_easy_setopt(con->mHandle, CURLOPT_OPENSOCKETFUNCTION, opensockCb);
+   }
+   else 
+#endif
+      con->mUri->ft->append6Chars(con->mUri, cld->scheme, "://", 
+			  cld->hostName, ":", cld->port, "/cimom");
 
    /* Initialize curl with the url */
    curl_easy_setopt(con->mHandle, CURLOPT_URL,
