@@ -46,3 +46,7 @@ Suresh Sundriyal, VMWare
 Josef Moellers, Fujitsu
 -----------------------
 03/29/2011 [ 3196128 ] enumInstances does not set NameSpace in ObjectPath in XML mode
+
+J. Bart Whiteley, Novell
+------------------------
+03/29/2011 [ 1956407 ] CIM-XML/HTTP connection to unix socket
